// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Wizard Backgrounds 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#ff9",
      "padding": "1rem",
    }
  }
>
  <h3>
    Solid
  </h3>
  <section
    className="fd-wizard"
  >
    <nav
      className="fd-wizard__navigation"
    >
      <ul
        className="fd-wizard__progress-bar"
      >
        <li
          className="fd-wizard__step fd-wizard__step--completed fd-wizard__step--current fd-wizard__step--active"
          onClick={[Function]}
        >
          <div
            className="fd-wizard__step-wrapper"
          >
            <a
              aria-label="Step 1: Foo"
              className="fd-wizard__step-container"
            >
              <span
                className="fd-wizard__step-indicator"
              >
                1
              </span>
              <div
                className="fd-wizard__label-container"
              >
                <span
                  className="fd-wizard__label"
                >
                  Step 1: Foo
                </span>
              </div>
            </a>
            <span
              className="fd-wizard__connector"
            />
          </div>
        </li>
        <li
          className="fd-wizard__step fd-wizard__step--upcoming"
          onClick={[Function]}
        >
          <div
            className="fd-wizard__step-wrapper"
          >
            <a
              aria-label="Step 2: Bar"
              className="fd-wizard__step-container"
            >
              <span
                className="fd-wizard__step-indicator"
              >
                2
              </span>
              <div
                className="fd-wizard__label-container"
              >
                <span
                  className="fd-wizard__label"
                >
                  Step 2: Bar
                </span>
              </div>
            </a>
            <span
              className="fd-wizard__connector"
            />
          </div>
        </li>
        <li
          className="fd-wizard__step fd-wizard__step--upcoming"
          onClick={[Function]}
        >
          <div
            className="fd-wizard__step-wrapper"
          >
            <a
              aria-label="Step 3: Baz"
              className="fd-wizard__step-container"
            >
              <span
                className="fd-wizard__step-indicator"
              >
                3
              </span>
              <div
                className="fd-wizard__label-container"
              >
                <span
                  className="fd-wizard__label"
                >
                  Step 3: Baz
                </span>
              </div>
            </a>
          </div>
        </li>
      </ul>
    </nav>
    <section
      className="fd-wizard__content fd-wizard__content--solid"
    >
      <p>
        This is the first step.
      </p>
      <div
        className="fd-wizard__next-step"
      >
        <button
          className="fd-button fd-button--emphasized fd-button--compact"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fd-button__text"
          >
            Next
          </span>
        </button>
      </div>
    </section>
    <footer
      className="fd-bar fd-bar--footer"
    >
      <div
        className="fd-bar__right"
      >
        <div
          className="fd-bar__element"
        >
          <button
            className="fd-button fd-button--transparent fd-button--compact"
            onClick={[Function]}
            type="button"
          >
            <span
              className="fd-button__text"
            >
              Cancel
            </span>
          </button>
        </div>
      </div>
    </footer>
  </section>
  <h3>
    List
  </h3>
  <section
    className="fd-wizard"
  >
    <nav
      className="fd-wizard__navigation"
    >
      <ul
        className="fd-wizard__progress-bar"
      >
        <li
          className="fd-wizard__step fd-wizard__step--completed fd-wizard__step--current fd-wizard__step--active"
          onClick={[Function]}
        >
          <div
            className="fd-wizard__step-wrapper"
          >
            <a
              aria-label="Step 1: Foo"
              className="fd-wizard__step-container"
            >
              <span
                className="fd-wizard__step-indicator"
              >
                1
              </span>
              <div
                className="fd-wizard__label-container"
              >
                <span
                  className="fd-wizard__label"
                >
                  Step 1: Foo
                </span>
              </div>
            </a>
            <span
              className="fd-wizard__connector"
            />
          </div>
        </li>
        <li
          className="fd-wizard__step fd-wizard__step--upcoming"
          onClick={[Function]}
        >
          <div
            className="fd-wizard__step-wrapper"
          >
            <a
              aria-label="Step 2: Bar"
              className="fd-wizard__step-container"
            >
              <span
                className="fd-wizard__step-indicator"
              >
                2
              </span>
              <div
                className="fd-wizard__label-container"
              >
                <span
                  className="fd-wizard__label"
                >
                  Step 2: Bar
                </span>
              </div>
            </a>
            <span
              className="fd-wizard__connector"
            />
          </div>
        </li>
        <li
          className="fd-wizard__step fd-wizard__step--upcoming"
          onClick={[Function]}
        >
          <div
            className="fd-wizard__step-wrapper"
          >
            <a
              aria-label="Step 3: Baz"
              className="fd-wizard__step-container"
            >
              <span
                className="fd-wizard__step-indicator"
              >
                3
              </span>
              <div
                className="fd-wizard__label-container"
              >
                <span
                  className="fd-wizard__label"
                >
                  Step 3: Baz
                </span>
              </div>
            </a>
          </div>
        </li>
      </ul>
    </nav>
    <section
      className="fd-wizard__content fd-wizard__content--list"
    >
      <p>
        This is the first step.
      </p>
      <div
        className="fd-wizard__next-step"
      >
        <button
          className="fd-button fd-button--emphasized fd-button--compact"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fd-button__text"
          >
            Next
          </span>
        </button>
      </div>
    </section>
    <footer
      className="fd-bar fd-bar--footer"
    >
      <div
        className="fd-bar__right"
      >
        <div
          className="fd-bar__element"
        >
          <button
            className="fd-button fd-button--transparent fd-button--compact"
            onClick={[Function]}
            type="button"
          >
            <span
              className="fd-button__text"
            >
              Cancel
            </span>
          </button>
        </div>
      </div>
    </footer>
  </section>
  <h3>
    Transparent
  </h3>
  <section
    className="fd-wizard"
  >
    <nav
      className="fd-wizard__navigation"
    >
      <ul
        className="fd-wizard__progress-bar"
      >
        <li
          className="fd-wizard__step fd-wizard__step--completed fd-wizard__step--current fd-wizard__step--active"
          onClick={[Function]}
        >
          <div
            className="fd-wizard__step-wrapper"
          >
            <a
              aria-label="Step 1: Foo"
              className="fd-wizard__step-container"
            >
              <span
                className="fd-wizard__step-indicator"
              >
                1
              </span>
              <div
                className="fd-wizard__label-container"
              >
                <span
                  className="fd-wizard__label"
                >
                  Step 1: Foo
                </span>
              </div>
            </a>
            <span
              className="fd-wizard__connector"
            />
          </div>
        </li>
        <li
          className="fd-wizard__step fd-wizard__step--upcoming"
          onClick={[Function]}
        >
          <div
            className="fd-wizard__step-wrapper"
          >
            <a
              aria-label="Step 2: Bar"
              className="fd-wizard__step-container"
            >
              <span
                className="fd-wizard__step-indicator"
              >
                2
              </span>
              <div
                className="fd-wizard__label-container"
              >
                <span
                  className="fd-wizard__label"
                >
                  Step 2: Bar
                </span>
              </div>
            </a>
            <span
              className="fd-wizard__connector"
            />
          </div>
        </li>
        <li
          className="fd-wizard__step fd-wizard__step--upcoming"
          onClick={[Function]}
        >
          <div
            className="fd-wizard__step-wrapper"
          >
            <a
              aria-label="Step 3: Baz"
              className="fd-wizard__step-container"
            >
              <span
                className="fd-wizard__step-indicator"
              >
                3
              </span>
              <div
                className="fd-wizard__label-container"
              >
                <span
                  className="fd-wizard__label"
                >
                  Step 3: Baz
                </span>
              </div>
            </a>
          </div>
        </li>
      </ul>
    </nav>
    <section
      className="fd-wizard__content fd-wizard__content--transparent"
    >
      <p>
        This is the first step.
      </p>
      <div
        className="fd-wizard__next-step"
      >
        <button
          className="fd-button fd-button--emphasized fd-button--compact"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fd-button__text"
          >
            Next
          </span>
        </button>
      </div>
    </section>
    <footer
      className="fd-bar fd-bar--footer"
    >
      <div
        className="fd-bar__right"
      >
        <div
          className="fd-bar__element"
        >
          <button
            className="fd-button fd-button--transparent fd-button--compact"
            onClick={[Function]}
            type="button"
          >
            <span
              className="fd-button__text"
            >
              Cancel
            </span>
          </button>
        </div>
      </div>
    </footer>
  </section>
</div>
`;

exports[`Storyshots Component API/Wizard Branching 1`] = `
<section
  className="fd-wizard"
>
  <nav
    className="fd-wizard__navigation"
  >
    <ul
      className="fd-wizard__progress-bar fd-wizard__progress-bar--sm"
    >
      <li
        branching={true}
        className="fd-wizard__step fd-wizard__step--completed fd-wizard__step--current fd-wizard__step--active"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Branch choice"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              1
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Branch choice
              </span>
            </div>
          </a>
          <span
            className="fd-wizard__connector fd-wizard__connector--branching"
          />
        </div>
      </li>
      <li
        className="fd-wizard__step fd-wizard__step--upcoming"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Finish"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              2
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Finish
              </span>
            </div>
          </a>
        </div>
      </li>
    </ul>
  </nav>
  <section
    className="fd-wizard__content fd-wizard__content--sm"
  >
    <div
      className="fd-popover"
      onBlur={[Function]}
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <div
            className="fd-popover"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <div
                  aria-controls="fd-mocked-short-id"
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  className="fd-select"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="combobox"
                  tabIndex={0}
                >
                  <div
                    className="fd-select__control"
                  >
                    <span
                      aria-label={null}
                      className="fd-select__text-content"
                    />
                    <span
                      className="fd-button fd-button--transparent fd-select__button"
                    >
                      <i
                        aria-hidden={true}
                        className="sap-icon--slim-arrow-down"
                        role="img"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
  <footer
    className="fd-bar fd-bar--footer"
  >
    <div
      className="fd-bar__right"
    >
      <div
        className="fd-bar__element"
      >
        <button
          className="fd-button fd-button--transparent fd-button--compact"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fd-button__text"
          >
            Cancel
          </span>
        </button>
      </div>
    </div>
  </footer>
</section>
`;

exports[`Storyshots Component API/Wizard Custom Labels 1`] = `
<section
  className="fd-wizard"
>
  <nav
    className="fd-wizard__navigation"
  >
    <ul
      className="fd-wizard__progress-bar fd-wizard__progress-bar--sm"
    >
      <li
        className="fd-wizard__step fd-wizard__step--completed fd-wizard__step--current fd-wizard__step--active"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Step 1: Foo"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              1
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Step 1: Foo
              </span>
            </div>
          </a>
          <span
            className="fd-wizard__connector"
          />
        </div>
      </li>
      <li
        className="fd-wizard__step fd-wizard__step--upcoming"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Step 2: Bar"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              2
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Step 2: Bar
              </span>
            </div>
          </a>
          <span
            className="fd-wizard__connector"
          />
        </div>
      </li>
      <li
        className="fd-wizard__step fd-wizard__step--upcoming"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Step 3: Baz"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              3
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Step 3: Baz
              </span>
            </div>
          </a>
        </div>
      </li>
    </ul>
  </nav>
  <section
    className="fd-wizard__content fd-wizard__content--sm"
  >
    <p>
      This is the first step.
    </p>
    <div
      className="fd-wizard__next-step"
    >
      <button
        className="fd-button fd-button--emphasized fd-button--compact"
        onClick={[Function]}
        type="button"
      >
        <span
          className="fd-button__text"
        >
          Next Step
        </span>
      </button>
    </div>
  </section>
  <footer
    className="fd-bar fd-bar--footer"
  >
    <div
      className="fd-bar__right"
    >
      <div
        className="fd-bar__element"
      >
        <button
          className="fd-button fd-button--transparent fd-button--compact"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fd-button__text"
          >
            Exit
          </span>
        </button>
      </div>
    </div>
  </footer>
</section>
`;

exports[`Storyshots Component API/Wizard Glyphs 1`] = `
<section
  className="fd-wizard"
>
  <nav
    className="fd-wizard__navigation"
  >
    <ul
      className="fd-wizard__progress-bar fd-wizard__progress-bar--sm"
    >
      <li
        className="fd-wizard__step fd-wizard__step--completed fd-wizard__step--current fd-wizard__step--active"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Customer"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              <i
                aria-label="person-placeholder"
                className="sap-icon--person-placeholder fd-wizard__icon"
                role="img"
              />
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Customer
              </span>
            </div>
          </a>
          <span
            className="fd-wizard__connector"
          />
        </div>
      </li>
      <li
        className="fd-wizard__step fd-wizard__step--upcoming"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Contact"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              <i
                aria-label="contacts"
                className="sap-icon--contacts fd-wizard__icon"
                role="img"
              />
            </span>
            <div
              className="fd-wizard__label-container fd-wizard__label-container--optional"
            >
              <span
                className="fd-wizard__label"
              >
                Contact
              </span>
              <span
                className="fd-wizard__optional-text"
              >
                (Optional)
              </span>
            </div>
          </a>
          <span
            className="fd-wizard__connector"
          />
        </div>
      </li>
      <li
        className="fd-wizard__step fd-wizard__step--upcoming"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Payment"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              <i
                aria-label="money-bills"
                className="sap-icon--money-bills fd-wizard__icon"
                role="img"
              />
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Payment
              </span>
            </div>
          </a>
          <span
            className="fd-wizard__connector"
          />
        </div>
      </li>
      <li
        className="fd-wizard__step fd-wizard__step--upcoming"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Bill To"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              <i
                aria-label="batch-payments"
                className="sap-icon--batch-payments fd-wizard__icon"
                role="img"
              />
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Bill To
              </span>
            </div>
          </a>
          <span
            className="fd-wizard__connector"
          />
        </div>
      </li>
      <li
        className="fd-wizard__step fd-wizard__step--upcoming"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Ship To"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              <i
                aria-label="shipping-status"
                className="sap-icon--shipping-status fd-wizard__icon"
                role="img"
              />
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Ship To
              </span>
            </div>
          </a>
        </div>
      </li>
    </ul>
  </nav>
  <section
    className="fd-wizard__content fd-wizard__content--sm"
  >
    <p>
      This is the customer step.
    </p>
    <div
      className="fd-wizard__next-step"
    >
      <button
        className="fd-button fd-button--emphasized fd-button--compact"
        onClick={[Function]}
        type="button"
      >
        <span
          className="fd-button__text"
        >
          Next
        </span>
      </button>
    </div>
  </section>
  <footer
    className="fd-bar fd-bar--footer"
  >
    <div
      className="fd-bar__right"
    >
      <div
        className="fd-bar__element"
      >
        <button
          className="fd-button fd-button--transparent fd-button--compact"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fd-button__text"
          >
            Cancel
          </span>
        </button>
      </div>
    </div>
  </footer>
</section>
`;

exports[`Storyshots Component API/Wizard Manual 1`] = `
<section
  className="fd-wizard"
>
  <nav
    className="fd-wizard__navigation"
  >
    <ul
      className="fd-wizard__progress-bar fd-wizard__progress-bar--sm"
    >
      <li
        className="fd-wizard__step fd-wizard__step--completed"
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Step 1: Foo"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              <i
                aria-label="accept"
                className="sap-icon--accept fd-wizard__icon"
                role="img"
              />
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Step 1: Foo
              </span>
            </div>
          </a>
          <span
            className="fd-wizard__connector fd-wizard__connector--active"
          />
        </div>
      </li>
      <li
        className="fd-wizard__step fd-wizard__step--active fd-wizard__step--current"
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Step 2: Bar"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              2
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Step 2: Bar
              </span>
            </div>
          </a>
          <span
            className="fd-wizard__connector fd-wizard__connector--undefined"
          />
        </div>
      </li>
      <li
        className="fd-wizard__step fd-wizard__step--upcoming"
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Step 3: Baz"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              3
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Step 3: Baz
              </span>
            </div>
          </a>
        </div>
      </li>
    </ul>
  </nav>
  <section
    className="fd-wizard__content fd-wizard__content--sm"
  >
    <p>
      This is content
    </p>
  </section>
  <footer
    className="fd-bar fd-bar--footer"
  >
    <div
      className="fd-bar__right"
    >
      <div
        className="fd-bar__element"
      >
        <button
          className="fd-button fd-button--transparent fd-button--compact"
          type="button"
        >
          <span
            className="fd-button__text"
          >
            Custom
          </span>
        </button>
      </div>
      <div
        className="fd-bar__element"
      >
        <button
          className="fd-button fd-button--transparent fd-button--compact"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fd-button__text"
          >
            Cancel
          </span>
        </button>
      </div>
    </div>
  </footer>
</section>
`;

exports[`Storyshots Component API/Wizard No Labels 1`] = `
<section
  className="fd-wizard"
>
  <nav
    className="fd-wizard__navigation"
  >
    <ul
      className="fd-wizard__progress-bar fd-wizard__progress-bar--sm"
    >
      <li
        className="fd-wizard__step fd-wizard__step--completed fd-wizard__step--current fd-wizard__step--no-label fd-wizard__step--active"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Customer"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              <i
                aria-label="person-placeholder"
                className="sap-icon--person-placeholder fd-wizard__icon"
                role="img"
              />
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Customer
              </span>
            </div>
          </a>
          <span
            className="fd-wizard__connector"
          />
        </div>
      </li>
      <li
        className="fd-wizard__step fd-wizard__step--upcoming fd-wizard__step--no-label"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Contact"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              <i
                aria-label="contacts"
                className="sap-icon--contacts fd-wizard__icon"
                role="img"
              />
            </span>
            <div
              className="fd-wizard__label-container fd-wizard__label-container--optional"
            >
              <span
                className="fd-wizard__label"
              >
                Contact
              </span>
              <span
                className="fd-wizard__optional-text"
              >
                (Optional)
              </span>
            </div>
          </a>
          <span
            className="fd-wizard__connector"
          />
        </div>
      </li>
      <li
        className="fd-wizard__step fd-wizard__step--upcoming fd-wizard__step--no-label"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Payment"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              <i
                aria-label="money-bills"
                className="sap-icon--money-bills fd-wizard__icon"
                role="img"
              />
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Payment
              </span>
            </div>
          </a>
          <span
            className="fd-wizard__connector"
          />
        </div>
      </li>
      <li
        className="fd-wizard__step fd-wizard__step--upcoming fd-wizard__step--no-label"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Bill To"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              <i
                aria-label="batch-payments"
                className="sap-icon--batch-payments fd-wizard__icon"
                role="img"
              />
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Bill To
              </span>
            </div>
          </a>
          <span
            className="fd-wizard__connector"
          />
        </div>
      </li>
      <li
        className="fd-wizard__step fd-wizard__step--upcoming fd-wizard__step--no-label"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Ship To"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              <i
                aria-label="shipping-status"
                className="sap-icon--shipping-status fd-wizard__icon"
                role="img"
              />
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Ship To
              </span>
            </div>
          </a>
        </div>
      </li>
    </ul>
  </nav>
  <section
    className="fd-wizard__content fd-wizard__content--sm"
  >
    <p>
      This is the customer step.
    </p>
    <div
      className="fd-wizard__next-step"
    >
      <button
        className="fd-button fd-button--emphasized fd-button--compact"
        onClick={[Function]}
        type="button"
      >
        <span
          className="fd-button__text"
        >
          Next
        </span>
      </button>
    </div>
  </section>
  <footer
    className="fd-bar fd-bar--footer"
  >
    <div
      className="fd-bar__right"
    >
      <div
        className="fd-bar__element"
      >
        <button
          className="fd-button fd-button--transparent fd-button--compact"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fd-button__text"
          >
            Cancel
          </span>
        </button>
      </div>
    </div>
  </footer>
</section>
`;

exports[`Storyshots Component API/Wizard Primary 1`] = `
<section
  className="fd-wizard"
>
  <nav
    className="fd-wizard__navigation"
  >
    <ul
      className="fd-wizard__progress-bar fd-wizard__progress-bar--sm"
    >
      <li
        className="fd-wizard__step fd-wizard__step--completed fd-wizard__step--current fd-wizard__step--active"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Step 1: Foo"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              1
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Step 1: Foo
              </span>
            </div>
          </a>
          <span
            className="fd-wizard__connector"
          />
        </div>
      </li>
      <li
        className="fd-wizard__step fd-wizard__step--upcoming"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Step 2: Bar"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              2
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Step 2: Bar
              </span>
            </div>
          </a>
          <span
            className="fd-wizard__connector"
          />
        </div>
      </li>
      <li
        className="fd-wizard__step fd-wizard__step--upcoming"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Step 3: Baz"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              3
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Step 3: Baz
              </span>
            </div>
          </a>
        </div>
      </li>
    </ul>
  </nav>
  <section
    className="fd-wizard__content fd-wizard__content--sm"
  >
    <p>
      This is the first step.
    </p>
    <div
      className="fd-wizard__next-step"
    >
      <button
        className="fd-button fd-button--emphasized fd-button--compact"
        onClick={[Function]}
        type="button"
      >
        <span
          className="fd-button__text"
        >
          Next
        </span>
      </button>
    </div>
  </section>
  <footer
    className="fd-bar fd-bar--footer"
  >
    <div
      className="fd-bar__right"
    >
      <div
        className="fd-bar__element"
      >
        <button
          className="fd-button fd-button--transparent fd-button--compact"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fd-button__text"
          >
            Cancel
          </span>
        </button>
      </div>
    </div>
  </footer>
</section>
`;

exports[`Storyshots Component API/Wizard Sizes 1`] = `
Array [
  <h3>
    Small
  </h3>,
  <section
    className="fd-wizard"
  >
    <nav
      className="fd-wizard__navigation"
    >
      <ul
        className="fd-wizard__progress-bar fd-wizard__progress-bar--sm"
      >
        <li
          className="fd-wizard__step fd-wizard__step--completed fd-wizard__step--current fd-wizard__step--active"
          onClick={[Function]}
        >
          <div
            className="fd-wizard__step-wrapper"
          >
            <a
              aria-label="Step 1: Foo"
              className="fd-wizard__step-container"
            >
              <span
                className="fd-wizard__step-indicator"
              >
                1
              </span>
              <div
                className="fd-wizard__label-container"
              >
                <span
                  className="fd-wizard__label"
                >
                  Step 1: Foo
                </span>
              </div>
            </a>
            <span
              className="fd-wizard__connector"
            />
          </div>
        </li>
        <li
          className="fd-wizard__step fd-wizard__step--upcoming"
          onClick={[Function]}
        >
          <div
            className="fd-wizard__step-wrapper"
          >
            <a
              aria-label="Step 2: Bar"
              className="fd-wizard__step-container"
            >
              <span
                className="fd-wizard__step-indicator"
              >
                2
              </span>
              <div
                className="fd-wizard__label-container"
              >
                <span
                  className="fd-wizard__label"
                >
                  Step 2: Bar
                </span>
              </div>
            </a>
            <span
              className="fd-wizard__connector"
            />
          </div>
        </li>
        <li
          className="fd-wizard__step fd-wizard__step--upcoming"
          onClick={[Function]}
        >
          <div
            className="fd-wizard__step-wrapper"
          >
            <a
              aria-label="Step 3: Baz"
              className="fd-wizard__step-container"
            >
              <span
                className="fd-wizard__step-indicator"
              >
                3
              </span>
              <div
                className="fd-wizard__label-container"
              >
                <span
                  className="fd-wizard__label"
                >
                  Step 3: Baz
                </span>
              </div>
            </a>
          </div>
        </li>
      </ul>
    </nav>
    <section
      className="fd-wizard__content fd-wizard__content--sm"
    >
      <p>
        This is the first step.
      </p>
      <div
        className="fd-wizard__next-step"
      >
        <button
          className="fd-button fd-button--emphasized fd-button--compact"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fd-button__text"
          >
            Next
          </span>
        </button>
      </div>
    </section>
    <footer
      className="fd-bar fd-bar--footer"
    >
      <div
        className="fd-bar__right"
      >
        <div
          className="fd-bar__element"
        >
          <button
            className="fd-button fd-button--transparent fd-button--compact"
            onClick={[Function]}
            type="button"
          >
            <span
              className="fd-button__text"
            >
              Cancel
            </span>
          </button>
        </div>
      </div>
    </footer>
  </section>,
  <h3>
    Medium
  </h3>,
  <section
    className="fd-wizard"
  >
    <nav
      className="fd-wizard__navigation"
    >
      <ul
        className="fd-wizard__progress-bar fd-wizard__progress-bar--md"
      >
        <li
          className="fd-wizard__step fd-wizard__step--completed fd-wizard__step--current fd-wizard__step--active"
          onClick={[Function]}
        >
          <div
            className="fd-wizard__step-wrapper"
          >
            <a
              aria-label="Step 1: Foo"
              className="fd-wizard__step-container"
            >
              <span
                className="fd-wizard__step-indicator"
              >
                1
              </span>
              <div
                className="fd-wizard__label-container"
              >
                <span
                  className="fd-wizard__label"
                >
                  Step 1: Foo
                </span>
              </div>
            </a>
            <span
              className="fd-wizard__connector"
            />
          </div>
        </li>
        <li
          className="fd-wizard__step fd-wizard__step--upcoming"
          onClick={[Function]}
        >
          <div
            className="fd-wizard__step-wrapper"
          >
            <a
              aria-label="Step 2: Bar"
              className="fd-wizard__step-container"
            >
              <span
                className="fd-wizard__step-indicator"
              >
                2
              </span>
              <div
                className="fd-wizard__label-container"
              >
                <span
                  className="fd-wizard__label"
                >
                  Step 2: Bar
                </span>
              </div>
            </a>
            <span
              className="fd-wizard__connector"
            />
          </div>
        </li>
        <li
          className="fd-wizard__step fd-wizard__step--upcoming"
          onClick={[Function]}
        >
          <div
            className="fd-wizard__step-wrapper"
          >
            <a
              aria-label="Step 3: Baz"
              className="fd-wizard__step-container"
            >
              <span
                className="fd-wizard__step-indicator"
              >
                3
              </span>
              <div
                className="fd-wizard__label-container"
              >
                <span
                  className="fd-wizard__label"
                >
                  Step 3: Baz
                </span>
              </div>
            </a>
          </div>
        </li>
      </ul>
    </nav>
    <section
      className="fd-wizard__content fd-wizard__content--md"
    >
      <p>
        This is the first step.
      </p>
      <div
        className="fd-wizard__next-step"
      >
        <button
          className="fd-button fd-button--emphasized fd-button--compact"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fd-button__text"
          >
            Next
          </span>
        </button>
      </div>
    </section>
    <footer
      className="fd-bar fd-bar--footer"
    >
      <div
        className="fd-bar__right"
      >
        <div
          className="fd-bar__element"
        >
          <button
            className="fd-button fd-button--transparent fd-button--compact"
            onClick={[Function]}
            type="button"
          >
            <span
              className="fd-button__text"
            >
              Cancel
            </span>
          </button>
        </div>
      </div>
    </footer>
  </section>,
  <h3>
    Large
  </h3>,
  <section
    className="fd-wizard"
  >
    <nav
      className="fd-wizard__navigation"
    >
      <ul
        className="fd-wizard__progress-bar fd-wizard__progress-bar--lg"
      >
        <li
          className="fd-wizard__step fd-wizard__step--completed fd-wizard__step--current fd-wizard__step--active"
          onClick={[Function]}
        >
          <div
            className="fd-wizard__step-wrapper"
          >
            <a
              aria-label="Step 1: Foo"
              className="fd-wizard__step-container"
            >
              <span
                className="fd-wizard__step-indicator"
              >
                1
              </span>
              <div
                className="fd-wizard__label-container"
              >
                <span
                  className="fd-wizard__label"
                >
                  Step 1: Foo
                </span>
              </div>
            </a>
            <span
              className="fd-wizard__connector"
            />
          </div>
        </li>
        <li
          className="fd-wizard__step fd-wizard__step--upcoming"
          onClick={[Function]}
        >
          <div
            className="fd-wizard__step-wrapper"
          >
            <a
              aria-label="Step 2: Bar"
              className="fd-wizard__step-container"
            >
              <span
                className="fd-wizard__step-indicator"
              >
                2
              </span>
              <div
                className="fd-wizard__label-container"
              >
                <span
                  className="fd-wizard__label"
                >
                  Step 2: Bar
                </span>
              </div>
            </a>
            <span
              className="fd-wizard__connector"
            />
          </div>
        </li>
        <li
          className="fd-wizard__step fd-wizard__step--upcoming"
          onClick={[Function]}
        >
          <div
            className="fd-wizard__step-wrapper"
          >
            <a
              aria-label="Step 3: Baz"
              className="fd-wizard__step-container"
            >
              <span
                className="fd-wizard__step-indicator"
              >
                3
              </span>
              <div
                className="fd-wizard__label-container"
              >
                <span
                  className="fd-wizard__label"
                >
                  Step 3: Baz
                </span>
              </div>
            </a>
          </div>
        </li>
      </ul>
    </nav>
    <section
      className="fd-wizard__content fd-wizard__content--lg"
    >
      <p>
        This is the first step.
      </p>
      <div
        className="fd-wizard__next-step"
      >
        <button
          className="fd-button fd-button--emphasized fd-button--compact"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fd-button__text"
          >
            Next
          </span>
        </button>
      </div>
    </section>
    <footer
      className="fd-bar fd-bar--footer"
    >
      <div
        className="fd-bar__right"
      >
        <div
          className="fd-bar__element"
        >
          <button
            className="fd-button fd-button--transparent fd-button--compact"
            onClick={[Function]}
            type="button"
          >
            <span
              className="fd-button__text"
            >
              Cancel
            </span>
          </button>
        </div>
      </div>
    </footer>
  </section>,
  <h3>
    XL
  </h3>,
  <section
    className="fd-wizard"
  >
    <nav
      className="fd-wizard__navigation"
    >
      <ul
        className="fd-wizard__progress-bar fd-wizard__progress-bar--xl"
      >
        <li
          className="fd-wizard__step fd-wizard__step--completed fd-wizard__step--current fd-wizard__step--active"
          onClick={[Function]}
        >
          <div
            className="fd-wizard__step-wrapper"
          >
            <a
              aria-label="Step 1: Foo"
              className="fd-wizard__step-container"
            >
              <span
                className="fd-wizard__step-indicator"
              >
                1
              </span>
              <div
                className="fd-wizard__label-container"
              >
                <span
                  className="fd-wizard__label"
                >
                  Step 1: Foo
                </span>
              </div>
            </a>
            <span
              className="fd-wizard__connector"
            />
          </div>
        </li>
        <li
          className="fd-wizard__step fd-wizard__step--upcoming"
          onClick={[Function]}
        >
          <div
            className="fd-wizard__step-wrapper"
          >
            <a
              aria-label="Step 2: Bar"
              className="fd-wizard__step-container"
            >
              <span
                className="fd-wizard__step-indicator"
              >
                2
              </span>
              <div
                className="fd-wizard__label-container"
              >
                <span
                  className="fd-wizard__label"
                >
                  Step 2: Bar
                </span>
              </div>
            </a>
            <span
              className="fd-wizard__connector"
            />
          </div>
        </li>
        <li
          className="fd-wizard__step fd-wizard__step--upcoming"
          onClick={[Function]}
        >
          <div
            className="fd-wizard__step-wrapper"
          >
            <a
              aria-label="Step 3: Baz"
              className="fd-wizard__step-container"
            >
              <span
                className="fd-wizard__step-indicator"
              >
                3
              </span>
              <div
                className="fd-wizard__label-container"
              >
                <span
                  className="fd-wizard__label"
                >
                  Step 3: Baz
                </span>
              </div>
            </a>
          </div>
        </li>
      </ul>
    </nav>
    <section
      className="fd-wizard__content fd-wizard__content--xl"
    >
      <p>
        This is the first step.
      </p>
      <div
        className="fd-wizard__next-step"
      >
        <button
          className="fd-button fd-button--emphasized fd-button--compact"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fd-button__text"
          >
            Next
          </span>
        </button>
      </div>
    </section>
    <footer
      className="fd-bar fd-bar--footer"
    >
      <div
        className="fd-bar__right"
      >
        <div
          className="fd-bar__element"
        >
          <button
            className="fd-button fd-button--transparent fd-button--compact"
            onClick={[Function]}
            type="button"
          >
            <span
              className="fd-button__text"
            >
              Cancel
            </span>
          </button>
        </div>
      </div>
    </footer>
  </section>,
]
`;

exports[`Storyshots Component API/Wizard Stacked 1`] = `
<section
  className="fd-wizard"
>
  <nav
    className="fd-wizard__navigation"
  >
    <ul
      className="fd-wizard__progress-bar fd-wizard__progress-bar--sm"
    >
      <li
        className="fd-wizard__step fd-wizard__step--completed fd-wizard__step--current fd-wizard__step--active"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Customer"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              <i
                aria-label="person-placeholder"
                className="sap-icon--person-placeholder fd-wizard__icon"
                role="img"
              />
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Customer
              </span>
            </div>
          </a>
          <span
            className="fd-wizard__connector"
          />
        </div>
      </li>
      <li
        className="fd-wizard__step fd-wizard__step--upcoming fd-wizard__step--stacked"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Contact"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              <i
                aria-label="contacts"
                className="sap-icon--contacts fd-wizard__icon"
                role="img"
              />
            </span>
            <div
              className="fd-wizard__label-container fd-wizard__label-container--optional"
            >
              <span
                className="fd-wizard__label"
              >
                Contact
              </span>
              <span
                className="fd-wizard__optional-text"
              >
                (Optional)
              </span>
            </div>
          </a>
          <span
            className="fd-wizard__connector"
          />
        </div>
      </li>
      <li
        className="fd-wizard__step fd-wizard__step--upcoming fd-wizard__step--stacked"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Payment"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              <i
                aria-label="money-bills"
                className="sap-icon--money-bills fd-wizard__icon"
                role="img"
              />
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Payment
              </span>
            </div>
          </a>
          <span
            className="fd-wizard__connector"
          />
        </div>
      </li>
      <li
        className="fd-wizard__step fd-wizard__step--upcoming fd-wizard__step--stacked"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Bill To"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              <i
                aria-label="batch-payments"
                className="sap-icon--batch-payments fd-wizard__icon"
                role="img"
              />
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Bill To
              </span>
            </div>
          </a>
          <span
            className="fd-wizard__connector"
          />
        </div>
      </li>
      <li
        className="fd-wizard__step fd-wizard__step--upcoming fd-wizard__step--stacked"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Ship To"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              <i
                aria-label="shipping-status"
                className="sap-icon--shipping-status fd-wizard__icon"
                role="img"
              />
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Ship To
              </span>
            </div>
          </a>
        </div>
      </li>
    </ul>
  </nav>
  <section
    className="fd-wizard__content fd-wizard__content--sm"
  >
    <p>
      This is the customer step.
    </p>
    <div
      className="fd-wizard__next-step"
    >
      <button
        className="fd-button fd-button--emphasized fd-button--compact"
        onClick={[Function]}
        type="button"
      >
        <span
          className="fd-button__text"
        >
          Next
        </span>
      </button>
    </div>
  </section>
  <footer
    className="fd-bar fd-bar--footer"
  >
    <div
      className="fd-bar__right"
    >
      <div
        className="fd-bar__element"
      >
        <button
          className="fd-button fd-button--transparent fd-button--compact"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fd-button__text"
          >
            Cancel
          </span>
        </button>
      </div>
    </div>
  </footer>
</section>
`;

exports[`Storyshots Component API/Wizard Validator 1`] = `
<section
  className="fd-wizard"
>
  <nav
    className="fd-wizard__navigation"
  >
    <ul
      className="fd-wizard__progress-bar fd-wizard__progress-bar--sm"
    >
      <li
        className="fd-wizard__step fd-wizard__step--completed fd-wizard__step--current fd-wizard__step--active"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Step 1: Foo"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              1
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Step 1: Foo
              </span>
            </div>
          </a>
          <span
            className="fd-wizard__connector"
          />
        </div>
      </li>
      <li
        className="fd-wizard__step fd-wizard__step--upcoming"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Step 2: Bar"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              2
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Step 2: Bar
              </span>
            </div>
          </a>
          <span
            className="fd-wizard__connector"
          />
        </div>
      </li>
      <li
        className="fd-wizard__step fd-wizard__step--upcoming"
        onClick={[Function]}
      >
        <div
          className="fd-wizard__step-wrapper"
        >
          <a
            aria-label="Step 3: Baz"
            className="fd-wizard__step-container"
          >
            <span
              className="fd-wizard__step-indicator"
            >
              3
            </span>
            <div
              className="fd-wizard__label-container"
            >
              <span
                className="fd-wizard__label"
              >
                Step 3: Baz
              </span>
            </div>
          </a>
        </div>
      </li>
    </ul>
  </nav>
  <section
    className="fd-wizard__content fd-wizard__content--sm"
  >
    <div
      className="fd-form-item"
    >
      <input
        aria-checked={false}
        checked={false}
        className="fd-checkbox"
        id="fd-mocked-short-id"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="fd-form-label fd-checkbox__label"
        htmlFor="fd-mocked-short-id"
      >
        <span
          className="fd-checkbox__text"
        >
          Is valid?
        </span>
      </label>
    </div>
  </section>
  <footer
    className="fd-bar fd-bar--footer"
  >
    <div
      className="fd-bar__right"
    >
      <div
        className="fd-bar__element"
      >
        <button
          className="fd-button fd-button--transparent fd-button--compact"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fd-button__text"
          >
            Cancel
          </span>
        </button>
      </div>
    </div>
  </footer>
</section>
`;
